--- a/resources/assets/sass/menu.scss
+++ b/resources/assets/sass/menu.scss
@@ -40,9 +40,12 @@
         vertical-align: bottom;
       }
     }
+    .menu-table-wrapper {
+      overflow-x: auto;
+    }
     /* menu table */
     .menu-table {
-      // width: 98%;
+      font-size: 0.7em;
       margin: 0;
       border-collapse: collapse;
       & td, & th {
@@ -132,6 +135,7 @@
 
 #menu-download {
   text-align: right;
+  font-size: 1.5em;
 }
 
 
@@ -174,4 +178,14 @@ th {
 
 input[type='text'], textarea {
   border: gray medium solid;
+}
+
+@media (min-width: 400px) {
+  .menu-container {
+    .menu-section {
+      .menu-table {
+        font-size: 1.2em;
+      }
+    }
+  }
 }
